Complete system security and performance improvements
- Fixed authentication consistency across all endpoints (unified withAuth pattern)
- Replaced all 'any' types with proper TypeScript interfaces in meeting routes
- Implemented structured logging with Logger utility replacing console.error
- Added MeetingAuditLog model to schema for tracking all meeting operations
- Implemented input sanitization with DOMPurify for XSS protection
- Added rate limiting for meeting creation (10 requests per 5 minutes)
- Integrated audit logging for CREATE, UPDATE, VIEW operations
- Fixed zoom field naming (zoom_join_url instead of zoom_link)
- Added proper error handling with structured responses
- Created comprehensive meeting types (MeetingResponse, CreateMeetingRequest, etc.)
- All TypeScript build errors resolved
- System is production-ready with enhanced security

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "cmdk": "^1.1.1",
     "csv-parse": "^5.6.0",
     "date-fns": "^3.6.0",
+    "isomorphic-dompurify": "^2.26.0",
     "lucide-react": "^0.515.0",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
@@ -75,6 +76,7 @@
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^3.0.0",
+    "@types/dompurify": "^3.0.5",
     "@types/lru-cache": "7.10.9",
     "@types/node": "^24.1.0",
     "@types/nodemailer": "^6.4.17",
