--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "type-check": "tsc --noEmit",
     "test": "jest",
     "test:unit": "jest src/__tests__/unit",
-    "test:integration": "jest src/__tests__/integration",
+    "test:integration": "jest tests/integration",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:e2e": "playwright test",
+    "test:e2e": "playwright test tests/e2e",
     "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:security": "jest tests/integration/auth-api.test.ts",
+    "test:performance": "playwright test tests/e2e --grep performance",
     "test:smoke": "playwright test --grep @smoke",
-    "test:perf": "playwright test --grep @performance",
     "test:all": "npm run lint && npm run type-check && npm run test && npm run test:e2e",
+    "test:comprehensive": "node scripts/run-tests.js",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "clean": "rm -rf .next node_modules coverage",
@@ -29,7 +32,8 @@
     "db:migrate": "prisma migrate dev",
     "db:seed": "prisma db seed",
     "db:reset": "prisma migrate reset",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "prepare": "husky"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
@@ -109,6 +113,7 @@
     "cross-env": "^10.0.0",
     "eslint": "^9.32.0",
     "eslint-config-next": "^15.4.5",
+    "husky": "^9.1.7",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5",
     "jest-environment-node": "^30.0.5",
